# CropChain

./: README.md
.github/workflows/: smart_contract_test.yml  test.yml
backend/: package-lock.json  package.json  prisma.config.ts  tsconfig.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20260625183356_init/: migration.sql
backend/src/: app.ts  server.ts
backend/src/config/: env.ts  prisma.ts
backend/src/controllers/: health.controller.ts
backend/src/routes/: health.route.ts  index.ts  ussd.ts
backend/src/services/: health.service.ts  wallet.service.ts
backend/src/utils/: crypto.ts
smart-contract/: Anchor.toml  package.json
smart-contract/migrations/: deploy.ts
smart-contract/programs/admin_registry/: Cargo.toml
smart-contract/programs/admin_registry/src/: constants.rs  error.rs  instruction_tests.rs  instructions.rs  lib.rs  state.rs
smart-contract/programs/credit_score/: Cargo.toml
smart-contract/programs/credit_score/src/: constants.rs  error.rs  instruction_tests.rs  (+3 more)
smart-contract/programs/crop-batch/: Cargo.toml
smart-contract/programs/programs/: Cargo.toml
smart-contract/programs/trade_escrow/: Cargo.toml
smart-contract/programs/trade_escrow/src/: constants.rs  error.rs  instruction_tests.rs  instructions.rs  lib.rs  state.rs
smart-contract/programs/trade_escrow/src/instructions/: accept_trade.rs  cancel_trade.rs  confirm_delivery.rs  create_trade.rs  raise_dispute.rs  resolve_dispute.rs
smart-contract/tests/: credit_score_integration_test.ts  crop_batch_integration_test.ts  trade_escrow_integration_test.ts
(+20 files in other folders)
